[package]
name = "futures-signals-observable-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.71"
proc-macro2 = "1.0.86"
quote = "1.0.36"

[dev-dependencies]
futures.workspace = true
futures-signals.workspace = true
futures-signals-observable = { path = "../futures-signals-observable" }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
